--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -3,8 +3,10 @@
         <h2>Login</h2>
     </mat-card-header>
     <mat-card-content>
-        <form class="example-form" [formGroup]="loginform" (ngSubmit)="proceedlogin()">
-
+        <form class="example-form" [formGroup]="loginform" (ngSubmit)="proceedLogin()">
+            <div class="alert alert-danger" role="alert" *ngIf="errorMessage">
+                {{errorMessage}}
+            </div>
             <mat-form-field class="example-full-width">
                 <mat-label>Email</mat-label>
                 <input matInput formControlName="email">
