--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -6,19 +6,33 @@
                 <div class="card" style="border-radius: 15px;">
                     <div class="card-body text-center">
                         <div class="mt-3 mb-4">
-                            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2-bg.webp"
-                                class="rounded-circle img-fluid" style="width: 100px;" />
+                            <img [src]=imageURL class="rounded-circle img-fluid" style="width: 100px;" />
                         </div>
                         <h4 class="mb-2">Julie L. Arsenault</h4>
                         <p class="text-muted mb-4">@Programmer
                         <div class="mb-4 pb-2">
 
-                            <button mat-fab extended>
+                            <!-- <button mat-fab extended>
 
                                 Upload photo
                                 <mat-icon>cloud-upload</mat-icon>
-                            </button>
+                            </button> -->
+                            <input type="file" class="file-input" (change)="onFileSelected($event)" #fileUpload>
 
+
+                            <div class="file-upload">
+
+
+                                {{fileName || "No file uploaded yet."}}
+
+
+                                <button mat-mini-fab color="primary" class="upload-btn" (click)="fileUpload.click()">
+
+                                    <mat-icon>attach_file</mat-icon>
+
+                                </button>
+
+                            </div>
                         </div>
                     </div>
                 </div>
