--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -3,7 +3,7 @@
         <h2>Registration</h2>
     </mat-card-header>
     <mat-card-content>
-        <form class="example-form" [formGroup]="registerform" (ngSubmit)="proceedregistration()">
+        <form class="example-form" [formGroup]="registerForm" (ngSubmit)="proceedRegistration()">
             <mat-form-field class="example-full-width">
                 <mat-label>Name</mat-label>
                 <input matInput formControlName="name">
